css/style.css
/* Stylesheet by Geri Rosenberg, 2019 */

.countiesbg {
	fill: #CDD1D6;
	stroke: #FFF;
	stroke-width: 1px;
}

.metrolines {
	stroke: #000;
	stroke-width: 2px;
	fill-opacity: 0;
}

.statelines {
	fill: none;
	stroke: #FFF;
	stroke-width: 3px;
}

.countylines {
	fill: none;
	stroke: #FFF;
	stroke-width: 1px;
}

.censustracts {
	stroke: #CDD1D6;
	stroke-width: 0.2px;
	stroke-linecap: round;
	opacity: 0.7;
}

.map {
	border: medium solid #999;
	margin: 10px 0 0 20px;
	background: #CDD1D6;
}

.chart {
	float: right;
	margin: 7px 20px 0 0;
}

.chartTitle {
	font-family: sans-serif;
	font-weight: bold;
	display: inline-block;
	font-size: 0.9em;
	white-space: initial;

}

.chartInfo {
	font-family: sans-serif;
	font-weight: bold;
	display: inline-block;
	font-size: 0.9em;
	white-space: initial;

}

.chartBackground {
	fill: rgba(128, 128, 128, .2);
}

.chartFrame {
	fill: none;
	stroke: #999;
	stroke-width: 3px;
	shape-rendering: crispEdges;
}

.axis path,
.axis line {
	fill: none;
	stroke: #000;
	shape-rendering: crispEdges;
}

.axis text {
	font-family: sans-serif;
	font-size: 0.6em;
	fill: #999;
}

.dot{
	stroke: #000;
	opacity: 0.7;
}

.infolabel {
	position: absolute;
	min-width: 100px;
	color: #fff;
	background-color: #000;
	border: solid thin #fff;
	padding: 5px 10px;
	top: -75px;
	z-index: 99;
	font-size: 0.8em;
	font-family: sans-serif;
}

.infolabel h1 {
	margin: 0 20px 0 0;
	padding: 0;
	display: inline-block;
	font-family: serif;
}

.numbers {
	fill: white;
	font-family: sans-serif;
}

.dropdown {
	left: 27px;
	z-index: 10;
	font-family: sans-serif;
	font-size: 1em;
	font-weight: bold;
	padding: 2px;
	background: #FFF;
	border-radius: 0px;
    border: 1px solid rgba(0,0,0,0.15);
    box-shadow: 0 1px 1px rgba(50,50,50,0.1);
    color: #8AA8BD;
}

.countylabel {
	font-size: 0.7em;
	text-shadow: -2px -2px -0 #FFF,
		2px -2px 0 #FFF,
		-2px 2px 0 #FFF,
		2px 2px 0 #FFF;
	fill: #000;
	font-family: sans-serif;
}

.countybglabel {
	font-size: 0.7em;
	text-shadow: -1px -1px -0 #FFF,
		1px -1px 0 #FFF,
		-1px 1px 0 #FFF,
		1px 1px 0 #FFF;
	fill: #000;
	opacity: 0.2;
	font-family: sans-serif
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

@media all and (min-width:830px) {
	.desktop-br {display: inline;}
	.mobile-br {display: none;}
}

@media all and (max-width:830px) {
	.desktop-br {display: none;}
	.mobile-br {display: inline;}
}


.source {
	padding-left: 20px;
	padding-top: 10px;
	float: bottom;
	font-size: 0.7em;
	font-style: sans-serif;
}

.pagetitle {
	font-size: 2em;
	color: #000;
}

.pagetop {
	background: #8AA8BD;
	color: #FFF;
	padding-left: 18px;
	padding-right: 20px;
	padding-top: 1px;
	padding-bottom: 10px;
	font-family: sans-serif;
}

.topinfo {
	font-size: 0.8em;
	display: block;
	text-align: justify;
}

.instr {
	color: #000;
	background-color: #FFF;
	opacity: 0.6;
	padding: 8px;
}

#toggleContainer {
    text-align: left;
    font-family: sans-serif;
    font-size: 0.9em;
    display: flex;
}

/* The switch - the box around the slider */
.switch {
  position: relative;
  width: 40px;
  height: 20px;
}

.switchpadding {
	width: 20px;
}

.switchinfo {
	padding-left: 5px;
	padding-top: 2px;
}

/* Hide default HTML checkbox */
.switch input {display:none;}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 17px;
  width: 17px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #810f7c;
}

input:focus + .slider {
  box-shadow: 0 0 1px #810f7c;
}

input:checked + .slider:before {
  -webkit-transform: translateX(18px);
  -ms-transform: translateX(18px);
  transform: translateX(18px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 20px;
}

.slider.round:before {
  border-radius: 50%;
}

